# AsulPowerSettingsAPI

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_EN.md
include/AsulPowerSettingsApi/: PowerSettingsManager.h  Types.h
include/cli/: CliApp.h
src/cli/: CMakeLists.txt  CliApp.cpp  main.cpp
src/sdk/: CMakeLists.txt  PowerSettingsManager.cpp  Types.cpp
tests/: CMakeLists.txt  TestFramework.h  test_guid.cpp  test_main.cpp  test_power_manager.cpp
